# alsa-patch-bay

./: Doxyfile.in  Makefile.am  Makefile.in  aclocal.m4  alsa-patch-bay.desktop  config.h.in  configure  configure.ac  jack-patch-bay.desktop
m4/: Makefile.in  fltk.m4
src/: 5-pin-din.xbm  Makefile.am  Makefile.in  addr.cpp  addr.h  apb.cpp  apb.h  driver.cpp  driver.h  main.cpp  misc.cpp  misc.h  plugin.h  plugins.cpp  plugins.h  subscription.cpp  subscription.h  ui.cpp  ui.h
src/driver/: Makefile.am  Makefile.in
src/driver/alsa/: Makefile.am  Makefile.in  alsa-addr.cpp  alsa-addr.h  alsa-driver.cpp  alsa-driver.h
src/driver/jack/: Makefile.am  Makefile.in  jack-addr.cpp  jack-addr.h  jack-driver.cpp  jack-driver.h
src/gui/: Makefile.am  Makefile.in
src/gui/fltk/: Makefile.am  Makefile.in  apb-fltk.cpp  apb-fltk.h
src/gui/gtkmm/: Makefile.am  Makefile.in  apb-gtkmm.cpp  apb-gtkmm.h  button-array.cpp  button-array.h  choice.cpp  choice.h  colour.cpp  colour.h  logbox.cpp  logbox.h  main-window.cpp  main-window.h  port-button.cpp  port-button.h
